<resources>
    <string name="app_name">androidDamster</string>
    <string name="age">Edad</string>
    <string name="calculate">Calcular</string>
    <string name="recalculate">Re-Calcular</string>
    <string name="result">Tu resultado</string>

    <string name="error">Error</string>

    <string name="title_bajo_peso">Bajo peso</string>
    <string name="description_bajo_peso">Estás por debajo de lo óptimo para tu peso y altura.</string>

    <string name="title_peso_normal">Normal</string>
    <string name="description_peso_normal">Estás en lo óptimo para tu peso y altura.</string>

    <string name="title_sobrepeso">Sobrepeso</string>
    <string name="description_sobrepeso">Estás por encima de lo óptimo para tu peso y altura.</string>

    <string name="title_obesidad">Obesidad</string>
    <string name="description_obesidad">Estás MUY por encima de lo óptimo para tu peso y altura.</string>

    <!--todoApp-->
    <string name="todo_Title">Bienvenido</string>
    <string name="todo_SubTitle">Categorias:</string>
    <string name="todo_SubTitle2">Tareas:</string>
    <string name="todo_dialog_add_task">Añade una tarea</string>
    <string name="todo_category_business">Negocio</string>
    <string name="todo_category_personal">Personal</string>
    <string name="todo_category_other">Otros</string>
    <string name="todo_button_addTask">Crear Tarea</string>

    <!--Super Heroes List App    -->
    <string name="super_heroes_list_app_button_menu">Super Heroes List</string>
    <string name="superhero_stats_intelligence">Inteligencia</string>
    <string name="superhero_stats_strength">Fuerza</string>
    <string name="superhero_stats_speed">Velocidad</string>
    <string name="superhero_stats_power">Poder</string>
    <string name="superhero_stats_combat">Combate</string>
    <string name="superhero_stats_durability">Durabilidad</string>

    <!--Settings-->

    <!--boton de menu-->
    <string name="settings_menu_call_button">Settings</string>
    <!--Titulos y subtitulos del menu-->
    <string name="settings_title_dark_mode">Modo Oscuro</string>
    <string name="settings_subtitle_dark_mode">Activa el modo oscuro para un cambio visual</string>
    <string name="settings_title_bluetooth">Bluetooth</string>
    <string name="settings_subtitle_bluetooth">Activa la conexion a dispositivos y perisfericos</string>
    <string name="settings_title_volume">Control de volumen</string>
    <string name="settings_title_vibrator">Vibración</string>
    <string name="settings_subtitle_vibrator">Silencia al dispositivo pero mantiene las vibraciones</string>
    <string name="superherohistory_button_access">Super Historial</string>

</resources>