<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity1.superHeoresApp.superHeroHistory.DetailSuperHeroActivity">

    <ImageView
        android:id="@+id/ivSuperhero"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:scaleType="centerCrop"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="220dp"
        android:elevation="8dp"
        app:cardCornerRadius="22dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvSuperheroName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:layout_margin="2dp"
                android:textStyle="bold"
                tools:text="Super Heroe" />
            <TextView
                android:id="@+id/tvSuperheroRealName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_margin="2dp"
                android:textStyle="italic"
                tools:text="Nombre Real" />
            <TextView
                android:id="@+id/tvSuperHeroPublisher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@color/background_black_opacity_60"
                android:textSize="11sp"
                android:layout_margin="2dp"
                android:textStyle="bold"
                tools:text="Creador" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="90dp"
            android:layout_marginHorizontal="16dp"
            android:gravity="bottom"
            android:orientation="horizontal">

            <View
                android:id="@+id/viewIntelligence"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/superhero_stat_intelligence"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="1"/>
            <View
                android:id="@+id/viewStrength"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/superhero_stat_strength"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="1"/>
            <View
                android:id="@+id/viewSpeed"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/superhero_stat_speed"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="1"/>
            <View
                android:id="@+id/viewDurability"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/superhero_stat_durability"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="1"/>
            <View
                android:id="@+id/viewPower"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/superhero_stat_power"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="1"/>
            <View
                android:id="@+id/viewCombat"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/superhero_stat_combat"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="195dp"
            android:layout_marginHorizontal="16dp"
            android:gravity="top"
            android:orientation="horizontal">

            <TextView
                android:text="@string/superhero_stats_intelligence"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="10dp"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="1"/>

            <TextView
                android:text="@string/superhero_stats_strength"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="10dp"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="1"/>

            <TextView
                android:text="@string/superhero_stats_speed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="10dp"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="1"/>

            <TextView
                android:text="@string/superhero_stats_durability"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="10dp"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="1"/>

            <TextView
                android:text="@string/superhero_stats_power"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="10dp"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="1"/>

            <TextView
                android:text="@string/superhero_stats_combat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="10dp"
                android:layout_marginHorizontal="4dp"
                android:layout_weight="1"/>


        </LinearLayout>

    </androidx.cardview.widget.CardView>





</androidx.constraintlayout.widget.ConstraintLayout>